corrected responsiveness on landing page and resuem work section spacing

--- a/resume.css
+++ b/resume.css
@@ -1,3 +1,5 @@
+
+
 .sidenav {
   height: 100%;
   width: 0;
@@ -121,7 +123,8 @@ display: flex;
 flex-direction: column;
 align-items: center;
 text-align: center;
-padding-top: 50px;
+padding-top: 25px;
+padding-bottom: 30px;
 padding-right: 80px;
 padding-left: 80px;
 border-bottom: 2px solid black;
